tests/fsharp/typecheck/sigs/neg60.bsl

neg60.fs(65,19,65,24): typecheck error FS3131: The definition of the custom operator 'where' does not use a valid combination of attribute flags

neg60.fs(65,19,65,38): typecheck error FS0001: This expression was expected to have type
    'bool'    
but here has type
    'unit'    

neg60.fs(71,36,71,40): typecheck error FS0043: The type 'System.Nullable<int>' does not have 'null' as a proper value. To create a null value for a Nullable type use 'System.Nullable()'.

neg60.fs(77,16,77,19): typecheck error FS0043: The type 'System.Nullable<int>' does not support the operator '?>='. Consider opening the module 'Microsoft.FSharp.Linq.NullableOperators'.

neg60.fs(78,16,78,19): typecheck error FS0043: The types 'System.Nullable<int>, int' do not support the operator '?>='. Consider opening the module 'Microsoft.FSharp.Linq.NullableOperators'.

neg60.fs(79,18,79,21): typecheck error FS0001: Expecting a type supporting the operator '+' but given a tuple type

neg60.fs(79,15,79,16): typecheck error FS0043: Expecting a type supporting the operator '+' but given a tuple type

neg60.fs(80,22,80,25): typecheck error FS0001: Expecting a type supporting the operator '+' but given a tuple type

neg60.fs(80,19,80,20): typecheck error FS0043: Expecting a type supporting the operator '+' but given a tuple type

neg60.fs(81,22,81,34): typecheck error FS0002: This function takes too many arguments, or is used in a context where a function is not expected

neg60.fs(87,10,87,13): typecheck error FS0043: The type 'System.Nullable<int>' does not support the operator '?=?'. Consider opening the module 'Microsoft.FSharp.Linq.NullableOperators'.
